# docs

./: .gitignore  .readthedocs.yaml  Makefile  README.md  make.bat  pyproject.toml
src/: conf.py  configure.rst  get-started.rst  index.rst
src/_static/: custom.css
src/concepts/: case.rst  context.rst  format.rst  instruction.rst  step.rst  template.rst
src/extensions/http/: actions.rst  index.rst  instructions.rst
src/extensions/json/: formats.rst  index.rst  instructions.rst
src/integrations/: allure.rst  vscode.rst
src/schemas/: __init__.py  helpers.py  http.py  json.py
